--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,7 @@
     "background_color": "#2196f3",
     "display": "standalone",
     "scope": "/",
-    "start_url": "./login.html",
+    "start_url": "/",
     "icons": [
         {
             "src": "images/icons/icon-72x72.png",
